opam-version: "1.2"
name:         "influxdb"
version:      "1.0"
maintainer:   "Danny Willems <contact@danny-willems.be>"
authors:      "Danny Willems <contact@danny-willems.be>"
bug_reports:  "https://github.com/dannywillems/ocaml-influxdb/issues"
homepage:     "https://github.com/dannywillems/ocaml-influxdb"
dev_repo:     "https://github.com/dannywillems/ocaml-influxdb"
license:      "LGPL-3.0 with OCaml linking exception"

build:        ["jbuilder" "build" "-j" jobs "-p" name "@install"]

available: [
  ocaml-version >= "4.02.3"
]

depends: [
  "lwt"
  "jbuilder"
  "cohttp"
]